hphp/test/slow/reified_generics/error-class-creation-3.php.expectf
Fatal error: This class requires 2 reified generics but 3 given in %s on line 5
